--- a/Automaze/Automaze.vcxproj
+++ b/Automaze/Automaze.vcxproj
@@ -162,8 +162,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Boutaoshi.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Maze.cpp" />
+    <ClCompile Include="MazeCreationException.cpp" />
+    <ClCompile Include="MazeFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
@@ -241,7 +244,10 @@
     <Text Include="Engine\LogMessages.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Boutaoshi.h" />
     <ClInclude Include="Maze.h" />
+    <ClInclude Include="MazeCreationException.h" />
+    <ClInclude Include="MazeFactory.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
